knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space_Template_Cell_Field__c/pqcrush__White_Space_Template_Cell_Field__c.object-meta.xml
<CustomObject>
    <label>White Space Template Cell Field</label>
    <nameField>
        <label>White Space Template Cell Field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>White Space Template Cell Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>