knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space_Template_Cell_Field__c/fields/pqcrush__DisplayFieldId__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__DisplayFieldId__c</fullName>
    <description>Id of the associated whitespace display field</description>
    <label>Display Field Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>