knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space_Template_Cell_Field__c/fields/pqcrush__ValueMapping__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__ValueMapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to mapping object</description>
    <label>Value Mapping</label>
    <referenceTo>pqcrush__Mapping__c</referenceTo>
    <relationshipLabel>White Space Template Cell Fields</relationshipLabel>
    <relationshipName>White_Space_Template_Cell_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>