knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space_Template_Cell_Field__c/fields/pqcrush__WhitespaceTemplate__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__WhitespaceTemplate__c</fullName>
    <label>Cross-Sell Template</label>
    <referenceTo>pqcrush__White_Space_Template__c</referenceTo>
    <relationshipLabel>Cross-Sell Template Cell Fields</relationshipLabel>
    <relationshipName>White_Space_Template_Cell_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>